<resources>
    <string name="app_name">What Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_release_date">release date</string>
    <string name="movie_overview">movie overview</string>
    <string name="popular_movies_txt">Popular Movies</string>
    <string name="popular_movie_desc">Current Popular Movies</string>
    <string name="now_playing_movie_txt">Now Playing Movies</string>
    <string name="currently_playing">Currently playing</string>
    <string name="tv_rating">Rating :</string>
    <string name="rating">Rating</string>
    <string name="tv_login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="btn_login">Login</string>
    <string name="no_account">Don\'t Have an Account?</string>
    <string name="register">Register</string>
    <string name="tv_create_new_account">Create New Account</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_create_account">Create Account</string>
    <string name="have_ccount">Already Have an Account?</string>
    <string name="login">Login</string>
    <string name="upcoming_movies_txt">Upcoming Movies</string>
    <string name="movies_you_might_like">Movies you might like</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="hi">Hi,</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="log_out">log out</string>
    <string name="error_getting_movies">error getting movies</string>
    <string name="press_back_again">Press back again to close app</string>
    <string name="error_getting_data">Error while getting data</string>
    <string name="username_is_empty">Username is empty!</string>
    <string name="password_is_empty">Password is empty!</string>
    <string name="username_or_password_incorrect">Username or password incorrect!</string>
    <string name="account_updated">Account Updated!</string>
    <string name="fail_update_account">Update Account Failed!</string>
    <string name="email_is_empty">Email is empty!</string>
    <string name="please_confirm_password">Please confirm password</string>
    <string name="password_mismatch">Check again, password mismatch!</string>
    <string name="account_created">Account Created!</string>
    <string name="tv_edit_account">Edit Account Info</string>
    <string name="change_profile_picture">change profile picture</string>
</resources>