<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.home.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular_movies_txt"
            style="@style/MovieHeadline"
            android:textColor="?attr/textFillColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular_movie_desc"
            style="@style/MovieHeadlineDesc"
            android:textColor="?attr/textFillColor"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            tools:listitem="@layout/item_movie" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/now_playing_movie_txt"
            style="@style/MovieHeadline"
            android:textColor="?attr/textFillColor"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currently_playing"
            style="@style/MovieHeadlineDesc"
            android:textColor="?attr/textFillColor"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_now_playing_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            tools:listitem="@layout/item_movie" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>