<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_backdrop"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/movie_poster_card"
            android:layout_width="115dp"
            android:layout_height="172dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="150dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movie_backdrop">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/movie_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/textFillColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_poster_card"
            app:layout_constraintTop_toBottomOf="@+id/movie_backdrop" />

        <TextView
            android:id="@+id/movie_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/movie_release_date"
            android:textColor="?attr/textFillColor"
            app:layout_constraintStart_toStartOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />


        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/movie_overview"
            android:textColor="?attr/textFillColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster_card" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_rating"
            android:textColor="?attr/textFillColor"
            app:layout_constraintStart_toStartOf="@+id/movie_release_date"
            app:layout_constraintTop_toBottomOf="@+id/movie_release_date" />

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/rating"
            android:textColor="?attr/textFillColor"
            app:layout_constraintStart_toEndOf="@+id/tv_rating"
            app:layout_constraintTop_toTopOf="@+id/tv_rating" />

        <TextView
            android:id="@+id/tv_similar_movies"
            style="@style/MovieHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/similar_movies"
            android:textColor="?attr/textFillColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_overview" />

        <TextView
            android:id="@+id/textView"
            style="@style/MovieHeadlineDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movies_you_might_like"
            android:textColor="?attr/textFillColor"
            app:layout_constraintTop_toBottomOf="@+id/tv_similar_movies"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_similar_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:listitem="@layout/item_movie" />
        <TextView
            android:id="@+id/test_id"
            style="@style/MovieHeadlineDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Test Id"
            android:textColor="?attr/textFillColor"
            app:layout_constraintTop_toBottomOf="@+id/rv_similar_movies"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>








